# edgebase

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: tasks.example.jsonl
docs/: AGENT_CLIENTS.md  ARCHITECTURE.md  GRAPH_VERIFICATION_0.1.7.md  LAUNCH_POST.md  RELEASE_AUDIT_0.1.2.md  RELEASE_AUDIT_0.1.3.md  RELEASE_AUDIT_0.1.4.md  RELEASE_AUDIT_0.1.5.md  RELEASE_AUDIT_0.1.6.md  RELEASE_AUDIT_0.1.7.md  RELEASE_AUDIT_0.1.8.md  RELEASE_AUDIT_0.1.9.md  UNIVERSAL_AGENT_PROMPT.md  VALIDATION.md
src/edgebase/: __init__.py  benchmark.py  bootstrap.py  cli.py  commands.py  context.py  context_branches.py  doctor.py  extractors.py  git.py  goal.py  graph.py  hooks.py  hosts.py  indexer.py  mcp.py  models.py  preflight.py  radius.py  runtime.py  setup.py  store.py  team.py
tests/: test_edgebase.py
